# jjwxc_font_tables

./: .gitignore  Dockerfile  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: docker-publish.yml  test-app.yml
jjwxc_font_tables/: __init__.py  api.py  db.py  healthcheck.py  html.py  index.py  lib.py  tools.py
jjwxc_font_tables/font_parser/: __init__.py  commonly_used_character.py  download.py  exception.py  quick.py  slow.py  tools.py
jjwxc_font_tables/font_parser/assets/: README.md  coorTable.json
jjwxc_font_tables/static/: style.css
jjwxc_font_tables/templates/: base.html  font.html  list.html
jjwxc_font_tables/templates/tools/: index.html  slow_match_jjwxc.html  slow_match_upload.html  slow_match_upload_font.html
tests/: conftest.py  test_api.py  test_db.py  test_factory.py  test_font_parser.py  test_healthcheck.py  test_html.py  test_index.py  test_lib.py  test_tools.py
